@@ -5,11 +5,11 @@ namespace MultiMC
 	public partial class MainWindow
 	{
 		private global::Gtk.UIManager UIManager;
-		private global::Gtk.Action preferencesAction;
-		private global::Gtk.Action updateAction;
 		private global::Gtk.Action openInstDirAction;
 		private global::Gtk.Action newInstAction;
 		private global::Gtk.Action refreshAction;
+		private global::Gtk.Action preferencesAction;
+		private global::Gtk.Action updateAction;
 		private global::Gtk.VBox windowbox;
 		private global::Gtk.Toolbar menuToolbar;
 		private global::Gtk.IconView instIconView;
@@ -21,13 +21,7 @@ namespace MultiMC
 			global::Stetic.Gui.Initialize (this);
 			// Widget MultiMC.MainWindow
 			this.UIManager = new global::Gtk.UIManager ();
-			global::Gtk.ActionGroup w1 = new global::Gtk.ActionGroup ("Settings Actions");
-			this.preferencesAction = new global::Gtk.Action ("preferencesAction", global::Mono.Unix.Catalog.GetString ("_Settings"), global::Mono.Unix.Catalog.GetString ("Change your settings"), "gtk-preferences");
-			this.preferencesAction.ShortLabel = global::Mono.Unix.Catalog.GetString ("_Settings");
-			w1.Add (this.preferencesAction, null);
-			this.updateAction = new global::Gtk.Action ("updateAction", global::Mono.Unix.Catalog.GetString ("Check for _Updates"), global::Mono.Unix.Catalog.GetString ("Check for updates."), "gtk-ok");
-			this.updateAction.ShortLabel = global::Mono.Unix.Catalog.GetString ("_Updates");
-			w1.Add (this.updateAction, null);
+			global::Gtk.ActionGroup w1 = new global::Gtk.ActionGroup ("Default");
 			this.UIManager.InsertActionGroup (w1, 0);
 			global::Gtk.ActionGroup w2 = new global::Gtk.ActionGroup ("Instance Actions");
 			this.openInstDirAction = new global::Gtk.Action ("openInstDirAction", global::Mono.Unix.Catalog.GetString ("_Open Instance Folder"), global::Mono.Unix.Catalog.GetString ("Open instance folder"), "gtk-open");
@@ -40,7 +34,13 @@ namespace MultiMC
 			this.refreshAction.ShortLabel = global::Mono.Unix.Catalog.GetString ("Refresh");
 			w2.Add (this.refreshAction, "<Control>r");
 			this.UIManager.InsertActionGroup (w2, 1);
-			global::Gtk.ActionGroup w3 = new global::Gtk.ActionGroup ("Default");
+			global::Gtk.ActionGroup w3 = new global::Gtk.ActionGroup ("Settings Actions");
+			this.preferencesAction = new global::Gtk.Action ("preferencesAction", global::Mono.Unix.Catalog.GetString ("_Settings"), global::Mono.Unix.Catalog.GetString ("Change your settings"), "gtk-preferences");
+			this.preferencesAction.ShortLabel = global::Mono.Unix.Catalog.GetString ("_Settings");
+			w3.Add (this.preferencesAction, null);
+			this.updateAction = new global::Gtk.Action ("updateAction", global::Mono.Unix.Catalog.GetString ("Check for _Updates"), global::Mono.Unix.Catalog.GetString ("Check for updates."), "gtk-ok");
+			this.updateAction.ShortLabel = global::Mono.Unix.Catalog.GetString ("_Updates");
+			w3.Add (this.updateAction, null);
 			this.UIManager.InsertActionGroup (w3, 2);
 			this.AddAccelGroup (this.UIManager.AccelGroup);
 			this.Name = "MultiMC.MainWindow";
@@ -92,11 +92,11 @@ namespace MultiMC
 			}
 			this.Show ();
 			this.DeleteEvent += new global::Gtk.DeleteEventHandler (this.OnDeleteEvent);
-			this.preferencesAction.Activated += new global::System.EventHandler (this.OnSettingsClicked);
-			this.updateAction.Activated += new global::System.EventHandler (this.OnUpdateClicked);
 			this.openInstDirAction.Activated += new global::System.EventHandler (this.OnViewFolderClicked);
 			this.newInstAction.Activated += new global::System.EventHandler (this.OnNewClicked);
 			this.refreshAction.Activated += new global::System.EventHandler (this.OnRefreshClicked);
+			this.preferencesAction.Activated += new global::System.EventHandler (this.OnSettingsClicked);
+			this.updateAction.Activated += new global::System.EventHandler (this.OnUpdateClicked);
 		}
 	}
 }
