@@ -5,8 +5,8 @@
     <target-gtk-version>2.12</target-gtk-version>
   </configuration>
   <import>
-    <widget-library name="../bin/Debug/MultiMC.exe" internal="true" />
     <widget-library name="glade-sharp, Version=2.12.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
+    <widget-library name="../bin/Release/MultiMC.exe" internal="true" />
   </import>
   <widget class="Gtk.Dialog" id="MultiMC.SettingsDialog" design-size="474 480">
     <property name="MemberName" />
